--- a/pom.xml
+++ b/pom.xml
@@ -46,20 +46,22 @@
 			<scope>test</scope>
 		</dependency>
 
-<!-- Anade documentacion Swagger en http://localhost:8080/swagger-ui/index.html -->
-<!--
-	<dependency>
-      <groupId>org.springdoc</groupId>
-      <artifactId>springdoc-openapi-data-rest</artifactId>
-      <version>1.6.13</version>
-   </dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-hateoas</artifactId>
+		</dependency>
 
-   <dependency>
-      <groupId>org.springdoc</groupId>
-      <artifactId>springdoc-openapi-ui</artifactId>
-      <version>1.6.13</version>
-   </dependency>
--->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.6.13</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
